# discord-sui-bot

./: .gitignore  Cargo.toml  Makefile  README.md  algo.go  commands.go  config.json  config.json.copy  go.mod  go.sum  main.go  messages.go  pi-build.bat  pi-deploy.bat  pi-start.bat  pi-stop.bat  pi_build.py  pi_deploy.py  responses.go  word_count.go
deploy/extra/: config.json
src/: main.rs
