[package]
name = "discord-sui-bot"
version = "1.0.0"
authors = ["GERALD WONG <ramza88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.serde_json]
version = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"]
version = "0.9.0-rc.2"

[dependencies.tokio]
version = "0.2.0-alpha.6"

[dependencies.regex]
version = "1"

[dependencies]
rand = "0.7"
chrono = "0.4"
